# Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

project(metrics_adapter)

message(STATUS "Begin to configure metrics_adapter")

get_property(UTILS_INCLUDE GLOBAL PROPERTY "UTILS_INCLUDE")

include_directories(${UTILS_INCLUDE})
include_directories(${CMAKE_CURRENT_LIST_DIR})

add_library(metrics_adapter STATIC "")
set_target_properties(metrics_adapter PROPERTIES UNITY_BUILD ON)

file(GLOB_RECURSE METRICS_ADAPTER_SRCS *.cpp)

add_dependencies(metrics_adapter status etcdapi)
target_sources(metrics_adapter PRIVATE ${METRICS_ADAPTER_SRCS})
target_link_libraries(metrics_adapter PUBLIC dl ${etcdapi_LIB_A} ${metrics_sdk_LIB} status)